public interface IEquipable {
    int getBonoAtaque();

    int getBonoDefensa();

    int getSlot();

}
